--- a/projects/template-generator/master-module.html
+++ b/projects/template-generator/master-module.html
@@ -937,20 +937,7 @@
           <input id="lg_top_margin" class="cs-text-box lg-top-margin" type="number" min="0" value="0" name="top-margin" onchange="updateMargin('lg','top',parseInt(this.value))" />
         </div>
         <div id="grid" class="grid">
-          <div class="row">
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-          </div>
+          <div class="row"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
         </div>
         <div class="margin-bottom">
           <label for="bottom-margin">Bottom Margin</label>
