--- a/projects/template-generator/master-module.html
+++ b/projects/template-generator/master-module.html
@@ -1830,6 +1830,7 @@
 
         updateCSDataDelay = setTimeout(function () {
           console.log('Master Module Extension Data', data.output);
+          localStorage.setItem("module",JSON.stringify(data.output));
           //extensionField.field.setData(data.output);
         }, 500);
       }
@@ -1869,7 +1870,314 @@
 
       //   init(extensionField.field.getData());
       // });
-      init();
+      var template_examples = [
+        {
+          "title": "Landing Page - Hero",
+          "template": {
+            "settings": {
+              "rowAnchor": "default",
+              "margin": {
+                "sm": {
+                  "top": 80,
+                  "bottom": 80
+                },
+                "md": {
+                  "top": 80,
+                  "bottom": 80
+                },
+                "lg": {
+                  "top": 80,
+                  "bottom": 80
+                }
+              }
+            },
+            "layout": {
+              "above": [
+                []
+              ],
+              "content": [
+                [
+                  {
+                    "sm": {
+                      "hidden": "show",
+                      "offset": 0,
+                      "span": 12,
+                      "split": "none",
+                      "anchor": "center",
+                      "justify": "center",
+                      "padding": "0 15px",
+                      "margin": "0 15px",
+                      "border": "none",
+                      "animation": "none",
+                      "animate": "both"
+                    },
+                    "md": {},
+                    "lg": {}
+                  }
+                ]
+              ],
+              "below": [
+                []
+              ]
+            }
+          }
+        },
+        {
+          "title": "Landing Page - Even Thirds",
+          "template": {
+            "settings": {
+              "rowAnchor": "default",
+              "margin": {
+                "sm": {
+                  "top": 80,
+                  "bottom": 80
+                },
+                "md": {
+                  "top": 80,
+                  "bottom": 80
+                },
+                "lg": {
+                  "top": 80,
+                  "bottom": 80
+                }
+              }
+            },
+            "layout": {
+              "above": [
+                []
+              ],
+              "content": [
+                [
+                  {
+                    "sm": {
+                      "hidden": "show",
+                      "offset": 0,
+                      "span": 12,
+                      "split": "none",
+                      "anchor": "center",
+                      "justify": "center",
+                      "padding": "0 15px",
+                      "margin": "0 15px",
+                      "border": "none",
+                      "animation": "none",
+                      "animate": "both"
+                    },
+                    "md": {
+                      "span": 4
+                    },
+                    "lg": {}
+                  },
+                  {
+                    "sm": {
+                      "hidden": "show",
+                      "offset": 0,
+                      "span": 12,
+                      "split": "none",
+                      "anchor": "center",
+                      "justify": "center",
+                      "padding": "0 15px",
+                      "margin": "0 15px",
+                      "border": "none",
+                      "animation": "none",
+                      "animate": "both"
+                    },
+                    "md": {
+                      "span": 4
+                    },
+                    "lg": {}
+                  },
+                  {
+                    "sm": {
+                      "hidden": "show",
+                      "offset": 0,
+                      "span": 12,
+                      "split": "none",
+                      "anchor": "center",
+                      "justify": "center",
+                      "padding": "0 15px",
+                      "margin": "0 15px",
+                      "border": "none",
+                      "animation": "none",
+                      "animate": "both"
+                    },
+                    "md": {
+                      "span": 4
+                    },
+                    "lg": {}
+                  }
+                ]
+              ],
+              "below": [
+                []
+              ]
+            }
+          }
+        },
+        {
+          "title": "Navigation - 6 Across",
+          "template": {
+            "settings": {
+              "rowAnchor": "default",
+              "margin": {
+                "sm": {
+                  "top": 80,
+                  "bottom": 80
+                },
+                "md": {
+                  "top": 80,
+                  "bottom": 80
+                },
+                "lg": {
+                  "top": 80,
+                  "bottom": 80
+                }
+              }
+            },
+            "layout": {
+              "above": [
+                []
+              ],
+              "content": [
+                [
+                  {
+                    "sm": {
+                      "hidden": "show",
+                      "offset": 0,
+                      "span": 6,
+                      "split": "none",
+                      "anchor": "center",
+                      "justify": "center",
+                      "padding": "0 15px",
+                      "margin": "0 15px",
+                      "border": "none",
+                      "animation": "none",
+                      "animate": "both"
+                    },
+                    "md": {
+                      "span": 4
+                    },
+                    "lg": {
+                      "span": 2
+                    }
+                  },
+                  {
+                    "sm": {
+                      "hidden": "show",
+                      "offset": 0,
+                      "span": 6,
+                      "split": "none",
+                      "anchor": "center",
+                      "justify": "center",
+                      "padding": "0 15px",
+                      "margin": "0 15px",
+                      "border": "none",
+                      "animation": "none",
+                      "animate": "both"
+                    },
+                    "md": {
+                      "span": 4
+                    },
+                    "lg": {
+                      "span": 2
+                    }
+                  },
+                  {
+                    "sm": {
+                      "hidden": "show",
+                      "offset": 0,
+                      "span": 6,
+                      "split": "none",
+                      "anchor": "center",
+                      "justify": "center",
+                      "padding": "0 15px",
+                      "margin": "0 15px",
+                      "border": "none",
+                      "animation": "none",
+                      "animate": "both"
+                    },
+                    "md": {
+                      "span": 4
+                    },
+                    "lg": {
+                      "span": 2
+                    }
+                  },
+                  {
+                    "sm": {
+                      "hidden": "show",
+                      "offset": 0,
+                      "span": 6,
+                      "split": "none",
+                      "anchor": "center",
+                      "justify": "center",
+                      "padding": "0 15px",
+                      "margin": "0 15px",
+                      "border": "none",
+                      "animation": "none",
+                      "animate": "both"
+                    },
+                    "md": {
+                      "span": 4
+                    },
+                    "lg": {
+                      "span": 2
+                    }
+                  },
+                  {
+                    "sm": {
+                      "hidden": "show",
+                      "offset": 0,
+                      "span": 6,
+                      "split": "none",
+                      "anchor": "center",
+                      "justify": "center",
+                      "padding": "0 15px",
+                      "margin": "0 15px",
+                      "border": "none",
+                      "animation": "none",
+                      "animate": "both"
+                    },
+                    "md": {
+                      "span": 4
+                    },
+                    "lg": {
+                      "span": 2
+                    }
+                  },
+                  {
+                    "sm": {
+                      "hidden": "show",
+                      "offset": 0,
+                      "span": 6,
+                      "split": "none",
+                      "anchor": "center",
+                      "justify": "center",
+                      "padding": "0 15px",
+                      "margin": "0 15px",
+                      "border": "none",
+                      "animation": "none",
+                      "animate": "both"
+                    },
+                    "md": {
+                      "span": 4
+                    },
+                    "lg": {
+                      "span": 2
+                    }
+                  }
+                ]
+              ],
+              "below": [
+                []
+              ]
+            }
+          }
+        }
+      ];
+
+      createTemplates(template_examples);
+
+      init(JSON.parse(localStorage.getItem("module")));
     </script>
   </body>
 </html>
